small update to code

--- a/autoencoder_training_segnet_rev1.ipynb
+++ b/autoencoder_training_segnet_rev1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -23,7 +23,8 @@
     "from address_gram_dataset import AddressGramDataset\n",
     "from torch.utils.data import DataLoader\n",
     "from utils import *\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import cv2 as cv"
    ]
   },
   {
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1873,37 +1874,431 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Testing time"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create SegNet model to load saved state\n",
+    "# label_nbr = 3\n",
+    "# saved_model = SegNet(label_nbr)\n",
+    "model_path = './models/checkpoint_110_0.011.tar'\n",
+    "\n",
+    "# load the model\n",
+    "saved_state_dict = torch.load(model_path)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# put in eval mode\n",
+    "loaded_model = saved_state_dict['model']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataParallel(\n",
+       "  (module): SegNet(\n",
+       "    (down1): segnetDown2(\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (maxpool_with_argmax): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    )\n",
+       "    (down2): segnetDown2(\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (maxpool_with_argmax): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    )\n",
+       "    (down3): segnetDown3(\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (maxpool_with_argmax): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    )\n",
+       "    (down4): segnetDown3(\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (maxpool_with_argmax): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    )\n",
+       "    (down5): segnetDown3(\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (maxpool_with_argmax): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    )\n",
+       "    (up5): segnetUp3(\n",
+       "      (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (up4): segnetUp3(\n",
+       "      (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (up3): segnetUp3(\n",
+       "      (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv3): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (up2): segnetUp2(\n",
+       "      (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (up1): segnetUp2(\n",
+       "      (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
+       "      (conv1): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv2): conv2DBatchNormRelu(\n",
+       "        (cbr_unit): Sequential(\n",
+       "          (0): Conv2d(64, 3, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "          (1): BatchNorm2d(3, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (2): ReLU(inplace)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.to(device)  # place on gpu/ cpu\n",
+    "loaded_model.eval()  # set eval mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(loaded_model.parameters()).is_cuda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create test datasets & dataloaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "arial_bold_test_dataset = AddressGramDataset('./address_grams/arialbold/test')\n",
+    "\n",
+    "# arial_italic_train_dataset = AddressGramDataset('./address_grams/arialitalic/train')\n",
+    "arial_italic_test_dataset = AddressGramDataset('./address_grams/arialitalic/test')\n",
+    "\n",
+    "# vera_train_dataset = AddressGramDataset('./address_grams/vera/train')\n",
+    "vera_test_dataset = AddressGramDataset('./address_grams/vera/test')\n",
+    "\n",
+    "# arial_train_dataset = AddressGramDataset('./address_grams/arial/train')\n",
+    "arial_test_dataset = AddressGramDataset('./address_grams/arial/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "\n",
+    "arial_bold_test_dataloader = DataLoader(arial_bold_test_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "# arial_italic_train_dataloader = DataLoader(arial_italic_train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "arial_italic_test_dataloader = DataLoader(arial_italic_test_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "# vera_train_dataloader = DataLoader(vera_train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "vera_test_dataloader = DataLoader(vera_test_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "# arial_train_dataloader = DataLoader(vera_train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "arial_test_dataloader = DataLoader(vera_test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loop through and check reconstruction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss average:  0.0035529624670743933\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = next(iter(vera_test_dataloader))\n",
+    "\n",
+    "x = x.to(device)\n",
+    "y = y.to(device)\n",
+    "\n",
+    "losses = ExpoAverageMeter()  # loss (per word decoded)\n",
+    "\n",
+    "y_hat = loaded_model(x)\n",
+    "\n",
+    "loss = torch.sqrt((y_hat - y).pow(2).mean())\n",
+    "\n",
+    "# Keep track of metrics\n",
+    "losses.update(loss.item())\n",
+    "\n",
+    "print('loss average: ', losses.avg)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# display image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(len(y_hat)):\n",
+    "    out = y_hat[i]\n",
+    "    out = out.cpu().detach().numpy()\n",
+    "    out = np.transpose(out, (1, 2, 0))\n",
+    "    out = out * 255\n",
+    "    out = np.clip(out, 0 , 255)\n",
+    "    out = out.astype(np.uint8)\n",
+    "    out = cv.cvtColor(out, cv.COLOR_RGB2BGR)\n",
+    "    cv.imwrite('./vera/{}_out.png'.format(i), out)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate features "
+   ]
   }
  ],
  "metadata": {
